# RPRZbOT

./: .coverage  .gitattributes  .gitignore  .markdownlint.json  .nixpacks.toml  .pre-commit-config.yaml  .railwayignore  BOT_SECURITY_SOLUTION.md  BRANCH_PROTECTION_SETUP.md  CI_CD_IMPROVEMENTS_SUMMARY.md  DEBUG_GUIDE.md  DEPLOYMENT_FINAL.md  DEPLOY_CHECKLIST.md  DEPLOY_INDEX.md  DEPLOY_NOW.md  Dockerfile  FINAL_INSTRUCTIONS.md  FINAL_LAUNCH.ps1  FINAL_STATUS.md  FIXES_REQUIRED.md  IMPROVEMENTS_REPORT.md  Makefile  PRODUCTION_READY_REPORT.md  Procfile  QUICKFIX_CHECKLIST.md  QUICK_FIX.md  RAILWAY_CLI_CHEATSHEET.md  RAILWAY_DEPLOY.md  RAILWAY_DEPLOY_GUIDE.md  RAILWAY_KEEPALIVE.md  RAILWAY_QUICKSTART.md  RAILWAY_RU.md  RAILWAY_SERVERLESS_SETUP.md  README.md  SECURITY_REPORT.md  START_BOT.md  SUMMARY.md  TEST_ANALYSIS_REPORT.md  TEST_REPORT.md  TIMEZONE_FIX.md  (+52 more)
bot/: analysis_report.md  cache.py  handlers.py  interfaces.py  main.py  main_refactored.py  main_webhook.py  media_processor.py  notifications.py  security.py
configs/: data_placeholders.json  data_placeholders.json.example
db_qwen/: index.faiss  index.pkl
docs/: roadmap.md  timezone_guide.md
logs/: .gitkeep  incidents.json.backup_1759955036  incidents.json.backup_1759955044  incidents.json.backup_1759955129  incidents.json.backup_1759955336  incidents.json.backup_1759955368  incidents.json.backup_1760025006  incidents.json.backup_1760028112  incidents.json.backup_1760028784  incidents.json.backup_1760028796  incidents.json.backup_1760030405  incidents.json.backup_1760030466  incidents.json.backup_1760030493  (+2 more)
(+61 files in other folders)
